# susi_translator

./: .env.example  .gitignore  README.md  pyproject.toml  reproduce_bug.py  requirements.txt  verify_fix.py
.github/workflows/: deploy-docs.yml
Audio_grabber/: ARCHITECTURE.md  url_resolver.py
app/: db.sqlite3
app/static/: audio_grabber.html
app/susi_app/: apps.py  serializers.py  urls.py  views.py
app/susi_app/services/: flask_client.py  transcript_service.py
app/susi_project/: settings.py
benchmarks/: comprehensive_benchmark_report.md  whisper_colab_benchmark.ipynb
django/: HACKING.md
django/docs/: index.md
django/transcribe_app/: apps.py  tasks.py  tests.py  transcribe_utils.py  transcript_store.py  urls.py  views.py
django/transcribe_project/: __init__.py  celery.py  settings.py
flask/: .dockerignore  .env.example  Dockerfile  README.md  audio_grabber.html  audio_grabber.py  audio_sources.py  docker-compose.yml  lang_map.example.yaml  lang_map.yaml  streaming_stt_ws.py  stress_ingest_test.py  stt_config.py  stt_ingest.py  test_fix.py  transcribe_listener.html  transcribe_server.py  websocket_manager.py
flask/auth/: admin_panel.py  create_superuser.py  decorators.py  extensions.py  models.py  routes.py
flask/deployment/: README.md
flask/deployment/certbot/: authenticator.sh  entrypoint.sh
flask/deployment/nginx/: Dockerfile.nginx  bootstrap_ssl.sh  nginx.conf  nginx.conf.template
flask/migrations/: alembic.ini  env.py
flask/migrations/versions/: 001_initial_schema.py
flask/nginx/: Dockerfile.nginx  README.md  generate_ssl.sh  nginx.conf
flask/providers/: __init__.py  base.py  registry.py
flask/providers/plugins/: __init__.py
flask/providers/plugins/transcription_plugins/: groq_whisper.py  whisper_local.py
flask/static/css/: config.css  create-room.css  stream.css  style.css
flask/static/js/: config.js  lobby.js  stream.js  web_mic.js
flask/templates/: base.html  config.html  create-room.html  stream.html
flask/templates/auth/: login.html  signup.html
flask/tests/: conftest.py  test_concurrency_fixes.py  test_configure_stream_url_security.py  test_endpoints.py  test_env_and_args.py  test_followup_fixes.py  test_provider_architecture.py  test_pure_helpers.py  test_resolve_tenant.py  test_upload_and_config.py  test_url_source_security.py  test_websocket_stream.py  test_youtube_source_security.py
test/: run_tests.py  test_stt_stream_client.py
website/: docusaurus.config.js  package-lock.json
website/docs/: intro.md
website/docs/api/: _category_.json  auth.md  configure.md  events.md  rooms.md  status.md  stream.md  transcripts.md  upload_file.md
website/docs/concepts/: _category_.json  architecture.md
website/docs/getting-started/: _category_.json  usage.md
website/docs/user-guide/: _category_.json  operating.md
website/src/css/: custom.css
website/src/pages/: index.js
(+2 files in other folders)
