[project]
name = "susi-translator"
version = "0.1.0"
description = "Real-time transcription and translation prototype with Django and Flask backends."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django",
    "django-cors-headers",
    "djangorestframework",
    "drf-yasg",
    "faster-whisper>=1.2.1",
    "flask",
    "flask-cors",
    "flask-restx",
    "mkdocs",
    "mkdocs-bootswatch",
    "numpy",
    "openai-whisper",
    "pyaudio",
    "pybars3",
    "python-dotenv",
    "pyyaml>=6.0.3",
    "redis>=7.4.0",
    "requests",
    "scipy",
    "soundfile>=0.13.1",
    "torch",
    "transformers>=5.8.1",
]

[tool.uv]
package = false
