[project]
name = "susi-translator"
version = "0.1.0"
description = "Real-time transcription and translation prototype with Django and Flask backends."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django",
    "django-cors-headers",
    "djangorestframework",
    "drf-yasg",
    "flask",
    "flask-admin>=2.2.0",
    "flask-bcrypt>=1.0.1",
    "flask-cors",
    "flask-jwt-extended>=4.7.4",
    "flask-limiter[redis]>=4.1.1",
    "flask-migrate",
    "redis>=5.0",
    "flask-restx",
    "flask-sock>=0.7.0",
    "flask-sqlalchemy>=3.1.1",
    "mkdocs",
    "mkdocs-bootswatch",
    "numpy",
    "openai-whisper",
    "pyaudio",
    "pybars3",
    "pydub",
    "python-dotenv",
    "requests",
    "scipy",
    "torch",
    "transformers",
    "yt-dlp",
    "cryptography>=49.0.0",
    "pyopenssl>=24.0.0",
]

[tool.uv]
package = false

[dependency-groups]
# Install with `uv sync --group dev` to pick up test-only deps.
dev = [
    "pytest>=7.0",
    "pytest-flask>=1.3.0",
]

[tool.pytest.ini_options]
testpaths = ["flask/tests"]
addopts = "-ra"
